added logo and bootstrap-sprockets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+ #navbar-main {
+  background-color: #001a33;
+
+ }
+
+ #navbar-links li a {
+  color: #f2f2f2;
+ }
+
+ #sockorama-logo img {
+  max-height: 4em;
+ }
