--- a/app/views/socks/index.html.erb
+++ b/app/views/socks/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-3">
-    <p class="lead">Shop Name</p>
+    <p class="lead">Sort By</p>
     <div class="list-group">
         <a href="#" class="list-group-item">Category 1</a>
         <a href="#" class="list-group-item">Category 2</a>
