--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
       <!-- Navigation -->
       <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar-main" role="navigation">
           <div class="container">
+            <div class="row">
               <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
+              <div class="navbar-header col-sm-3 col-md-3 col-lg-3">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                       <span class="sr-only">Toggle navigation</span>
                       <span class="icon-bar"></span>
@@ -26,9 +27,17 @@
                     <%= image_tag 'SOCK-O-RAMA', class: 'img-responsive' %>
                   </div>
               </div>
+              <div class="col-sm-6 col-md-6 col-lg-6"> <!-- Fix this -->
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search for...">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">Go!</button>
+                  </span>
+                </div><!-- /input-group -->
+              </div><!-- /.col-lg-6 -->
               <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav" id="navbar-links">
+              <div class="collapse navbar-collapse col-sm-3 col-md-3 col-lg-3" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav pull-right" id="navbar-links">
                       <li>
                           <a href="#">About</a>
                       </li>
@@ -42,6 +51,7 @@
               </div>
               <!-- /.navbar-collapse -->
           </div>
+        </div>
           <!-- /.container -->
       </nav>
 
