Added margin to search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                   </div>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6"> <!-- Fix this -->
-                <div class="input-group">
+                <div class="input-group" id="search-bar">
                   <input type="text" class="form-control" placeholder="Search for...">
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="button">Go!</button>
