Setup sock partial

--- a/app/views/socks/_sock.html.erb
+++ b/app/views/socks/_sock.html.erb
@@ -1,20 +1,18 @@
 <div class="col-sm-4 col-lg-4 col-md-4">
   <div class="thumbnail">
-    <img src="http://placehold.it/320x150" alt="">
+    <img src="<%= SockImage.find_by(sock_id: sock.id).url %>" alt="">
     <div class="caption">
-      <h4 class="pull-right">$24.99</h4>
-      <h4><a href="#">First Product</a>
+      <h4 class="pull-right"><%= '$' + sock.price.to_s %></h4>
+      <h4><a href="#"><%= sock.name %></a>
       </h4>
-      <p>See more snippets like this online store item at <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp - http://bootsnipp.com</a>.</p>
+      <p><%= sock.description %></p>
     </div>
     <div class="ratings">
-      <p class="pull-right">15 reviews</p>
+      <p class="pull-right"><%= num = Random.new.rand(20) %> reviews</p>
       <p>
-        <span class="glyphicon glyphicon-star"></span>
-        <span class="glyphicon glyphicon-star"></span>
-        <span class="glyphicon glyphicon-star"></span>
-        <span class="glyphicon glyphicon-star"></span>
-        <span class="glyphicon glyphicon-star"></span>
+        <% ((num/5)+1).times do %>
+          <span class="glyphicon glyphicon-star"></span>
+        <% end %>
       </p>
     </div>
   </div>
