--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,13 +39,13 @@
               <div class="collapse navbar-collapse col-sm-3 col-md-3 col-lg-3" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav pull-right" id="navbar-links">
                       <li>
-                          <a href="#">About</a>
+                          <%=link_to "Login", login_path %>
                       </li>
                       <li>
-                          <a href="#">Services</a>
+                          <a href="#">Sign Up</a>
                       </li>
                       <li>
-                          <a href="#">Contact</a>
+                          <a href="#">Shopping Cart</a>
                       </li>
                   </ul>
               </div>
