add homepage link to sockorama logo

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -11,7 +11,7 @@
           <span class="icon-bar"></span>
         </button>
         <div id="sockorama-logo">
-          <%= image_tag 'SOCK-O-RAMA', class: 'img-responsive' %>
+          <%= link_to (image_tag 'SOCK-O-RAMA', class: 'img-responsive'), root_path %>
         </div>
       </div>
       <div class="col-sm-6 col-md-6 col-lg-6"> <!-- Fix this -->
