Make the sock partial use AS3 images

--- a/app/views/socks/index.html.erb
+++ b/app/views/socks/index.html.erb
@@ -12,9 +12,6 @@
     <h1 id="header-title">Popular Items<h1>  <%# ERB THIS LATER %>
   </header>
     <div class="row">
-      <% @socks.each do |sock| %>
-        <%= render partial: 'sock', locals: { sock: sock } %>
-      <% end %>
+      <%= render @socks %>
     </div>
-
 </div>
