--- a/app/assets/stylesheets/shop-homepage.css
+++ b/app/assets/stylesheets/shop-homepage.css
@@ -34,3 +34,12 @@ body {
 footer {
     margin: 50px 0;
 }
+
+.sock-index-img-box {
+  width: 100px;
+  height: 100px;
+}
+.sock-index-img {
+  width: 100%;
+  height: 100%;
+}
