--- a/app/views/socks/_sock.html.erb
+++ b/app/views/socks/_sock.html.erb
@@ -1,6 +1,10 @@
 <div class="col-sm-4 col-lg-4 col-md-4">
   <div class="thumbnail">
-    <img src="<%= SockImage.find_by(sock_id: sock.id).url %>" alt="">
+
+
+    <div class="sock-index-image-box">
+      <img  class="sock-index-image" src="<%= sock.sock_images.first.picture(:medium) %>" alt="">
+    </div>
     <div class="caption">
       <h4 class="pull-right"><%= '$' + sock.price.to_s %></h4>
       <h4><a href="#"><%= sock.name %></a>
@@ -8,7 +12,7 @@
       <p><%= sock.description %></p>
     </div>
     <div class="ratings">
-      <p class="pull-right"><%= num = Random.new.rand(20) %> reviews</p>
+      <p class="pull-right sock-index-img image-responsive"><%= num = Random.new.rand(20) %> reviews</p>
       <p>
         <% ((num/5)+1).times do %>
           <span class="glyphicon glyphicon-star"></span>
