--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
 
       <!-- Page Content -->
       <div class="container">
+        <div class="row text-center">
+          <% flash.each do |key, value| %>
+            <div class="alert alert-<%= key %>"><%= value %></div>
+          <% end %>
+        </div>
         <div class="row">
 
           <%= yield %>
@@ -28,13 +33,13 @@
           <hr>
 
           <!-- Footer -->
-          <footer>
-              <div class="row">
-                  <div class="col-lg-12">
-                      <p>Copyright &copy; Sock-o-Rama 2016</p>
-                  </div>
-              </div>
-          </footer>
+        <footer>
+          <div class="row">
+            <div class="col-lg-12">
+              <p>Copyright &copy; Sock-o-Rama 2016</p>
+            </div>
+          </div>
+        </footer>
 
       </div>
 
