--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -25,11 +25,14 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse col-sm-3 col-md-3 col-lg-3" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav pull-right" id="navbar-links">
-          <li><%=link_to "Login", login_path %></li>
-          <li><%=link_to "Sign Up", signup_path %></li>
-          <li>
-              <a href="#">Shopping Cart</a>
-          </li>
+          <% if current_user %>
+            <li><%=link_to "Logout", logout_path %></li>
+            <li><%=link_to "Account", user_path(current_user) %></li>
+          <% else %>
+            <li><%=link_to "Login", login_path %></li>
+            <li><%=link_to "Sign Up", signup_path %></li>
+          <% end %>
+          <li><a href="#">Shopping Cart</a></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
