more styling on show

--- a/app/views/socks/show.html.erb
+++ b/app/views/socks/show.html.erb
@@ -18,7 +18,7 @@
     <div class="dropdowns">
       <%= simple_form_for @order_item, :url => order_items_path do |f| %>
         <%= f.input :sock_size_id, collection: @sock_sizes, include_blank: false, label_method: lambda { |ss| ss.size.size } %>
-        <%= f.submit %>
+        <%= f.button :submit, "Add to cart", class: "btn-primary" %>
       <% end %>
     </div>
     <div class="ratings">
