--- a/app/views/socks/_search.html.erb
+++ b/app/views/socks/_search.html.erb
@@ -1,1 +1,16 @@
-<input type="text" class="form-control" placeholder="Search for...">
+  <!-- <input type="text" class="form-control" placeholder="Search for...">
+  <span class="input-group-btn">
+    <button class="btn btn-default" type="button">Go!</button>
+  </span> -->
+
+<div class="input-group" id="search-bar">
+  <%= form_tag search_path, method: :get, class: "form-group input-group", id: "search-bar" do %>
+    <%= text_field_tag :query, params[:query], class: "form-controller", placeholder: "Sarch for..." %>
+    <%= submit_tag "Go!", name: nil, class: "btn btn-default" %>
+  <% end %>
+</div>
+
+  <!-- <%= simple_form_for User.new, html: { class: 'form-control form-horizontal' }, validate: true do |f| %>
+    <%= f.input :name %>
+    <%= f.button :submit, "Submit", id: 'create_user' %>
+  <% end %> -->
