--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -16,7 +16,7 @@
       </div>
       <div class="col-sm-6 col-md-6 col-lg-6">
         <%= render partial: 'socks/search' %>
-      </div><!-- /.col-lg-6 -->
+      </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse col-sm-3 col-md-3 col-lg-3" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav pull-right" id="navbar-links">
