--- a/app/views/socks/_search.html.erb
+++ b/app/views/socks/_search.html.erb
@@ -3,9 +3,9 @@
     <button class="btn btn-default" type="button">Go!</button>
   </span> -->
 
-<div class="input-group" id="search-bar">
-  <%= form_tag search_path, method: :get, class: "form-group input-group ", id: "search-bar" do %>
+  <%= form_tag search_path, method: :get, class: "input-group ", id: "search-bar" do %>
     <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Sarch for...", type: "text" %>
+    <span class="input-group-btn">
     <%= submit_tag "Go!", name: nil, class: "btn btn-default", type: "button" %>
+    </span>
   <% end %>
-</div>
