--- a/app/views/socks/_search.html.erb
+++ b/app/views/socks/_search.html.erb
@@ -5,7 +5,7 @@
 
 <div class="input-group" id="search-bar">
   <%= form_tag search_path, method: :get, class: "form-group input-group ", id: "search-bar" do %>
-    <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Sarch for...", type: "text" %>
+    <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search for...", type: "text" %>
     <%= submit_tag "Go!", name: nil, class: "btn btn-default", type: "button" %>
   <% end %>
 </div>
