--- a/app/views/socks/_search.html.erb
+++ b/app/views/socks/_search.html.erb
@@ -1,7 +1,13 @@
+  <!-- <input type="text" class="form-control" placeholder="Search for...">
+  <span class="input-group-btn">
+    <button class="btn btn-default" type="button">Go!</button>
+  </span> -->
 
-<div class="input-group" id="search-bar">
-  <%= form_tag search_path, method: :get, class: "form-group input-group ", id: "search-bar" do %>
+
+
+  <%= form_tag search_path, method: :get, class: "input-group", id: "search-bar" do %>
     <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search for...", type: "text" %>
-    <%= submit_tag "Go!", name: nil, class: "btn btn-default", type: "button" %>
+    <span class="input-group-btn">
+      <%= submit_tag "Go!", name: nil, class: "btn btn-default", type: "button" %>
     </span>
   <% end %>
