--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -6,4 +6,10 @@
   <% @order_items.each do |order_item| %>
     <%= render 'carts/cart_row', product: order_item.sock_size, order_item: order_item %>
   <% end %>
+  <div id="order-totals" class="text-right">
+    <h5 class="text-right">Subtotal: <span style="color: gray"><%= number_to_currency current_order.subtotal %></span></h5>
+    <h5 class="text-right">Shipping: <span style="color: gray"><%= number_to_currency current_order.shipping %></span></h5>
+    <h5 class="text-right">Tax: <span style="color: gray"><%= number_to_currency current_order.tax %></span></h5>
+    <h4 class="text-right">Total Price: <span style="color: green"><%= number_to_currency current_order.total %></span></h4>
+  </div>
 <% end %>
