Changed search for option

--- a/app/views/socks/index.html.erb
+++ b/app/views/socks/index.html.erb
@@ -9,7 +9,7 @@
 
 <div class="col-md-9">
   <header class="text-center" id="sock-header">
-    <h1 id="header-title">Popular Items<h1>  <%# ERB THIS LATER %>
+    <%= render 'socks/header' %>
   </header>
     <div class="row">
       <%= render @socks %>
