change and add orders columns

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,3 +1,4 @@
 <div class="shopping-cart">
   <%= render "shopping_cart" %>
+  <%= render 'payola/transactions/checkout', sellable: current_order %>
 </div>
