added name to address validations and added name field to address form

--- a/app/views/addresses/_address_form.html.erb
+++ b/app/views/addresses/_address_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @address do |f| %>
+  <%= f.input :name %>
   <%= f.input :street %>
   <%= f.input :city %>
   <%= f.input :state %>
