--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -11,7 +11,7 @@
           <span class="icon-bar"></span>
         </button>
         <div id="sockorama-logo">
-          <%= link_to (image_tag 'images/SOCK-O-RAMA', class: 'img-responsive'), root_path %>
+          <%= link_to (image_tag asset_path('SOCK-O-RAMA'), class: 'img-responsive'), root_path %>
         </div>
       </div>
       <div class="col-sm-5 col-md-5 col-lg-5">
