--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -12,7 +12,7 @@
       <%= form_for order_item, remote: true do |f| %>
         <div class="row">
           <div class="col-xs-4">
-            <%= f.number_field :quantity, value: order_item.quantity.to_i, class: "form-control", min: 1 %>
+            <%= f.number_field :quantity, value: order_item.quantity.to_i, class: "form-control", min: 1, max: order_item.sock_size.quantity %>
             <%= f.hidden_field :product_id, value: product.id %>
           </div>
           <div class="col-xs-8 text-right">
