Redirects and completes order, mailer does not send out

--- a/app/views/user_notifier_mailer/order_complete.html.erb
+++ b/app/views/user_notifier_mailer/order_complete.html.erb
@@ -1,3 +1,3 @@
-+<h1>Here's your purchased sock, enjoy ... </h1>
- +<h2><%= @sock.order %></h2>
- +<%= simple_format @sock.order %>
+<h1>Here's your purchased sock, enjoy ... </h1>
+ <h2><%= @sale.order %></h2>
+ <%= simple_format @sale.order %>
